# controller/struct.go
@@ -15,7 +15,6 @@ type MedicalRecord struct {
 	VisitDate string             `bson:"visitdate,omitempty" json:"visitdate,omitempty"`
 	Diagnosis string             `bson:"diagnosis,omitempty" json:"diagnosis,omitempty"`
 	Treatment string             `bson:"treatment,omitempty" json:"treatment,omitempty"`
-	Notes     string             `bson:"notes,omitempty" json:"notes,omitempty"`
 }
 
 type Biodata struct {
@@ -23,7 +22,6 @@ type Biodata struct {
 	PasienName    string             `bson:"pasienName,omitempty" json:"pasienName,omitempty"`
 	Gender        string             `bson:"gender,omitempty" json:"gender,omitempty"`
 	TTL           string             `bson:"ttl,omitempty" json:"ttl,omitempty"`
-	Status        string             `bson:"status,omitempty" json:"status,omitempty"`
 	Phone_number  string             `bson:"phonenumber,omitempty" json:"phonenumber,omitempty"`
 	Alamat        string             `bson:"alamat,omitempty" json:"alamat,omitempty"`
 	Doctor        Doctor             `bson:"doctor,omitempty" json:"doctor,omitempty"`
@@ -34,7 +32,6 @@ type ReqPasien struct {
 	PasienName    string        `bson:"pasienName,omitempty" json:"pasienName,omitempty" example:"Doni"`
 	Gender        string        `bson:"gender,omitempty" json:"gender,omitempty" example:"Perempuan"`
 	TTL           string        `bson:"ttl,omitempty" json:"ttl,omitempty" `
-	Status        string        `bson:"status,omitempty" json:"status,omitempty" example:"single"`
 	Phone_number  string        `bson:"phonenumber,omitempty" json:"phonenumber,omitempty" example:"08567432"`
 	Alamat        string        `bson:"alamat,omitempty" json:"alamat,omitempty" example:"Sariasih 25, Bandung"`
 	Doctor        Doctor        `bson:"doctor,omitempty" json:"doctor,omitempty"`
